<resources>
    <string name="app_name">口袋书目</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="experience">变身书虫</string>

    <string name="login">登录</string>
    <string name="logout">登出</string>
    <string name="register_now">没有帐号?点击注册</string>
    <string name="db_login">豆瓣登录</string>
    <string name="wb_login">微博登录</string>
    <string name="register">注册</string>
    <string name="user">用户名</string>
    <string name="password">密码</string>
    <string name="password_confirm">确认密码</string>
    <string name="boy">男</string>
    <string name="girl">女</string>

    <string name="drawer_open">打开抽屉</string>
    <string name="drawer_close">关闭抽屉</string>

    <string name="drawer_login">请登录</string>
    <string name="drawer_reading">今日阅读</string>
    <string name="drawer_bookshelf">我的书架</string>
    <string name="drawer_calendar">阅读日历</string>
    <string name="drawer_sync">数据同步</string>
    <string name="drawer_feedback">反馈意见</string>
    <string name="drawer_about">关于我们</string>
    <string name="drawer_exit">退出应用</string>
    <string name="drawer_other"> </string>

    <string name="bookshelf_after">想读</string>
    <string name="bookshelf_now">在读</string>
    <string name="bookshelf_before">已读</string>
    <string name="bookshelf_start">开始阅读</string>
    <string name="bookshelf_finish">完成阅读</string>
    <string name="bookshelf_abandon">放弃阅读</string>
    <string name="bookshelf_review">温故知新</string>
    <string name="bookshelf_delete">删除此书</string>

    <string name="reading_word">\b\b世上只有一种英雄主义,那就是在认清生活真相后依然热爱生活.</string>


    <string name="feedback_succeed">发送成功,谢谢您的反馈</string>
    <string name="feedback_fail">发送失败,请检查网络状况</string>
    <string name="feedback_title">口袋书目反馈</string>
    <string name="send">发送</string>
    <string name="feedback_content">反馈内容</string>
    <string name="developer">开发者</string>
    <string name="info">信息</string>
    <string name="send_feedback">发送反馈</string>


    <string name="about_introduce">\"如果能帮助你改善一点点生活,\n就是我们最大的满足!\"</string>
    <string name="about_title1">V1.2.0</string>
    <string name="about_detail1">关于我们:\n
                              口袋树屋是几个在校大学生的课余制作,
                              能力有限请见谅.
                              如有任何意见,欢迎反馈给我们,我们将会耐心倾听!</string>
    <string name="about_title2">V1.1.0</string>
    <string name="about_detail2">关于我们:\n
                              口袋树屋是几个在校大学生的课余制作,
                              能力有限请见谅.
                              如有任何意见,欢迎反馈给我们,我们将会耐心倾听!</string>
    <string name="about_title3">V1.0.0</string>
    <string name="about_detail3">关于我们:\n
                              口袋树屋是几个在校大学生的课余制作,
                              能力有限请见谅.
                              如有任何意见,欢迎反馈给我们,我们将会耐心倾听!</string>

    <string name="login_wb">新浪微博</string>
    <string name="login_db">　豆瓣　</string>
    <string name="login_accounts">使用社交帐号登录</string>
</resources>
