<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_reading"
            android:icon="@mipmap/ic_reading"
            android:checked="true"
            android:title="@string/drawer_reading"/>
        <item
            android:id="@+id/drawer_bookshelf"
            android:icon="@mipmap/ic_bookshelf"
            android:title="@string/drawer_bookshelf"/>
        <!--<item-->
            <!--android:id="@+id/drawer_calendar"-->
            <!--android:icon="@mipmap/ic_calendar"-->
            <!--android:title="@string/drawer_calendar"/>-->
    </group>

    <item>
        <menu>
            <item
                android:id="@+id/drawer_feedback"
                android:icon="@mipmap/ic_feedback"
                android:title="@string/drawer_feedback"/>
            <item
                android:id="@+id/drawer_about"
                android:icon="@mipmap/ic_about"
                android:title="@string/drawer_about"/>
            <item
                android:id="@+id/drawer_exit"
                android:icon="@mipmap/ic_exit"
                android:title="@string/drawer_exit"/>
        </menu>
    </item>
</menu>