<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:id="@+id/login_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:title="@string/login"
        android:background="@color/toolbar"/>

    <LinearLayout
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/login_margin6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/wb_login"
            android:drawableTop="@mipmap/ic_sina"
            android:gravity="center"
            android:textSize="@dimen/login_text_size3"
            android:textColor="@color/login_item"
            android:text="@string/login_wb"
            android:drawablePadding="@dimen/login_padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/db_login"
            android:gravity="center"
            android:layout_marginLeft="@dimen/login_margin7"
            android:text="@string/login_db"
            android:textSize="@dimen/login_text_size3"
            android:textColor="@color/login_item"
            android:drawablePadding="@dimen/login_padding"
            android:drawableTop="@mipmap/ic_douban"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:gravity="center"
        android:layout_marginTop="@dimen/login_margin8"
        android:text="@string/login_accounts"
        android:textSize="@dimen/login_text_size4"
        android:textColor="@color/login_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>