<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:expandable='http://schemas.android.com/apk/res-auto'
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="function.AdviceActivity"
    android:fitsSystemWindows="true"
    android:background="@color/white">
    <android.support.v7.widget.Toolbar
        android:id="@+id/about_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar"
        android:title="关于我们" />
    <ImageView
        android:id="@+id/about_icon"
        android:src="@mipmap/logo"
        android:scaleType="centerCrop"
        android:layout_below="@id/about_toolbar"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_width="100dp"
        android:layout_height="100dp" />

    <TextView
        android:id="@+id/about_title1"
        android:layout_below="@id/about_icon"
        android:drawableRight="@drawable/about_flag"
        android:textColor="@color/input"
        android:textSize="22sp"
        android:text="@string/about_title1"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/about_detail1"
        android:layout_below="@id/about_title1"
        android:textSize="17sp"
        android:visibility="gone"
        android:text="@string/about_detail1"
        android:textColor="@color/bookshelf_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/about_title2"
        android:layout_below="@id/about_detail1"
        android:drawableRight="@drawable/about_flag"
        android:textColor="@color/input"
        android:textSize="22sp"
        android:text="@string/about_title2"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/about_detail2"
        android:layout_below="@id/about_title2"
        android:textSize="17sp"
        android:visibility="gone"
        android:text="@string/about_detail2"
        android:textColor="@color/bookshelf_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>