<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/white"
    android:id="@+id/login_container">
    <android.support.v7.widget.Toolbar
        android:id="@+id/login_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:title="@string/login"
        android:background="@color/toolbar"/>
    <EditText
        android:id="@+id/user_name"
        android:layout_width="@dimen/login_width1"
        android:layout_height="@dimen/login_height1"
        android:singleLine="true"
        android:maxLength="20"
        android:hint="邮箱"
        android:gravity="center_vertical"
        android:textSize="@dimen/login_text_size1"
        android:textColor="@color/bookshelf_title"
        android:textColorHint="@color/login_border_text"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/login_toolbar"
        android:layout_marginTop="@dimen/login_margin1"
        android:background="@drawable/gray_border_top"
        android:drawableLeft="@mipmap/ic_account"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="@dimen/login_width1"
        android:layout_height="@dimen/login_height1"
        android:layout_below="@id/user_name"
        android:layout_centerHorizontal="true"
        android:inputType="textPassword"
        android:layout_marginTop="-1dp"
        android:singleLine="true"
        android:gravity="center_vertical"
        android:maxLength="16"
        android:textSize="@dimen/login_text_size1"
        android:hint="@string/password"
        android:textColor="@color/bookshelf_title"
        android:textColorHint="@color/login_border_text"
        android:background="@drawable/gray_border_bottom"
        android:drawableLeft="@mipmap/ic_psw"/>
    <Button
        android:id="@+id/login"
        android:layout_below="@id/password"
        android:layout_width="@dimen/login_width2"
        android:layout_height="@dimen/login_height2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/login_margin2"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/login_text_size2"
        android:background="@drawable/btn_background"
         />
    <TextView
        android:id="@+id/register_entrance"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/login_height3"
        android:layout_below="@id/login"
        android:gravity="bottom"
        android:layout_centerHorizontal="true"
        android:text="@string/register_now"
        android:textSize="@dimen/login_text_size2"
        android:textColor="@color/login_border_text"/>

    <TextView
        android:text="第三方快捷登录"
        android:textSize="@dimen/login_text_size2"
        android:textColor="@color/login_border_text"
        android:id="@+id/register_three"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/register_entrance"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/login_margin3"
        android:layout_height="@dimen/login_height4" />
    <TextView
        android:id="@+id/register_useless"
        android:layout_width="0dp"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/db_login"
        android:layout_below="@id/register_three"
        android:layout_marginTop="@dimen/login_margin4"
        android:layout_width="@dimen/login_width3"
        android:layout_height="@dimen/login_height5"
        android:textColor="@color/login_border_text"
        android:layout_toLeftOf="@+id/register_useless"
        android:layout_marginRight="@dimen/login_margin5"
        android:text="@string/db_login"
        android:textSize="@dimen/login_text_size2"
        android:background="@drawable/btn_gray_border" />
    <Button
        android:id="@+id/wb_login"
        android:layout_width="@dimen/login_width3"
        android:layout_height="@dimen/login_height5"
        android:layout_below="@id/register_three"
        android:layout_marginTop="@dimen/login_margin4"
        android:layout_toRightOf="@id/register_useless"
        android:layout_marginLeft="@dimen/login_margin5"
        android:text="@string/wb_login"
        android:textSize="@dimen/login_text_size2"
        android:textColor="@color/login_border_text"
        android:background="@drawable/btn_gray_border" />
</RelativeLayout>