<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    >
    <android.support.v7.widget.Toolbar
        android:id="@+id/register_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:title="注册"
        android:background="@color/toolbar"/>
    <EditText
        android:id="@+id/register_email"
        android:layout_width="@dimen/register_width1"
        android:layout_height="@dimen/register_height1"
        android:layout_marginTop="@dimen/register_margin1"
        android:layout_below="@id/register_toolbar"
        android:layout_centerHorizontal="true"
        android:hint="邮箱"
        android:textSize="@dimen/login_text_size1"
        android:textColor="@color/bookshelf_title"
        android:textColorHint="@color/register_border_text"
        android:maxLength="20"
        android:singleLine="true"
        android:padding="@dimen/register_padding"
        android:drawableLeft="@mipmap/ic_account"
        android:background="@drawable/gray_border_top"/>
    <EditText
        android:id="@+id/register_user"
        android:layout_width="@dimen/register_width1"
        android:layout_height="@dimen/register_height1"
        android:layout_centerHorizontal="true"
        android:drawableLeft="@mipmap/ic_account"
        android:hint="@string/user"
        android:textColor="@color/bookshelf_title"
        android:textColorHint="@color/register_border_text"
        android:maxLength="16"
        android:textSize="@dimen/login_text_size1"
        android:singleLine="true"
        android:padding="@dimen/register_padding"
        android:layout_marginTop="-1dp"
        android:layout_below="@id/register_email"
        android:background="@drawable/gray_border_empty"/>
    <EditText
        android:id="@+id/register_psw"
        android:layout_width="@dimen/register_width1"
        android:layout_height="@dimen/register_height1"
        android:layout_below="@id/register_user"
        android:layout_centerHorizontal="true"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColor="@color/bookshelf_title"
        android:textColorHint="@color/register_border_text"
        android:maxLength="16"
        android:singleLine="true"
        android:layout_marginTop="-1dp"
        android:padding="@dimen/register_padding"
        android:textSize="@dimen/login_text_size1"
        android:drawableLeft="@mipmap/ic_psw"
        android:background="@drawable/gray_border_empty"/>
    <EditText
        android:id="@+id/register_psw_confirm"
        android:layout_width="@dimen/register_width1"
        android:layout_height="@dimen/register_height1"
        android:layout_below="@id/register_psw"
        android:layout_centerHorizontal="true"
        android:inputType="textPassword"
        android:layout_marginTop="-1dp"
        android:padding="@dimen/register_padding"
        android:singleLine="true"
        android:hint="@string/password_confirm"
        android:textSize="@dimen/login_text_size1"
        android:textColor="@color/bookshelf_title"
        android:textColorHint="@color/register_border_text"
        android:maxLength="16"
        android:drawableLeft="@mipmap/ic_psw"
        android:background="@drawable/gray_border_bottom"/>


    <Button
        android:id="@+id/register"
        android:layout_width="@dimen/person_width2"
        android:layout_height="@dimen/register_height2"
        android:layout_below="@id/register_psw_confirm"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/register_margin2"
        android:text="@string/register"
        android:textSize="@dimen/register_text_size1"
        android:textColor="@color/white"
        android:background="@drawable/btn_background" />
    <TextView
        android:id="@+id/register_login"
        android:layout_below="@id/register"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:text="已有帐号?点击登录"
        android:textColor="@color/register_border_text"
        android:textSize="@dimen/register_text_size1"
        android:gravity="bottom"
        android:layout_height="@dimen/register_height3" />
</RelativeLayout>